# tinotaxv1

./: .gitignore  CONTRIBUTING.md  Cargo.toml  LICENSE  LICENSE-APACHE  LICENSE-MIT  README.md  SECURITY.md  deny.toml  installation and commands.txt  justfile  wallets.example.toml  wallets.toml
.cargo/: config.toml
.github/: AUTOMATION.md
.github/workflows/: README.md  ci.yml  gitleaks.yml
apps/desktop/: index.html  package-lock.json  package.json  tsconfig.json  vite.config.ts
apps/desktop/e2e/: README.md  desktop.e2e.ts  wdio.conf.ts
apps/desktop/e2e/fixtures/seeded-project/: project.toml
apps/desktop/scripts/: run-tauri.mjs
apps/desktop/src/: App.test.tsx  App.tsx  WalletInsights.tsx  hmrcQuestionnaire.ts  main.tsx  review.test.ts  review.ts  styles.css  tauri.ts  types.ts
apps/desktop/src-tauri/: Cargo.toml  tauri.conf.json
apps/desktop/src-tauri/capabilities/: default.json
apps/desktop/src-tauri/src/: lib.rs  main.rs
crates/: README.md
crates/foundation/tinotax-config/: Cargo.toml  README.md
crates/foundation/tinotax-config/src/: README.md  lib.rs  project_config.rs
crates/foundation/tinotax-core/: Cargo.toml  README.md
crates/foundation/tinotax-core/src/: amount.rs  chain.rs  date.rs  tax_event.rs
crates/foundation/tinotax-store/: Cargo.toml  README.md
crates/foundation/tinotax-store/src/: manifest.rs  raw_cache.rs
crates/ingest/tinotax-cex/: Cargo.toml  README.md
crates/ingest/tinotax-cex/src/: README.md  importer.rs  record.rs  report.rs
crates/ingest/tinotax-connectors/: Cargo.toml
crates/ingest/tinotax-connectors/src/: blockscout.rs  fetcher.rs  http.rs  lib.rs  nearblocks.rs
crates/ingest/tinotax-connectors/src/models/: blockscout.rs  nearblocks.rs
crates/ingest/tinotax-normalise/: Cargo.toml
crates/ingest/tinotax-normalise/src/: classify.rs  event_id.rs  evm.rs  lib.rs  near.rs
crates/interface/tinotax-app/: Cargo.toml  README.md
crates/interface/tinotax-app/src/: analysis_export.rs  cex_import.rs  create_project.rs  desktop_api.rs  doctor.rs  event_cache.rs  fetch_project.rs  lib.rs  pipeline.rs  preflight.rs  project_ops.rs  readiness.rs  wallet_insights.rs
crates/interface/tinotax-app/tests/: create_project_live.rs  pipeline_e2e.rs
crates/interface/tinotax-cli/: Cargo.toml
crates/interface/tinotax-cli/src/: README.md  cli.rs  main.rs
crates/output/tinotax-evidence/: Cargo.toml  README.md
crates/output/tinotax-evidence/src/: README.md  counterparties.rs  lib.rs  markdown.rs  pack.rs  raw_index.rs
crates/output/tinotax-report/: Cargo.toml  README.md
crates/output/tinotax-report/src/: audit_report.rs  json_export.rs  lib.rs
crates/review/tinotax-diagnostics/: Cargo.toml  README.md
crates/review/tinotax-diagnostics/src/: duplicates.rs  review_flags.rs
crates/review/tinotax-ledger/: Cargo.toml
crates/review/tinotax-ledger/src/: README.md  build.rs  lib.rs
crates/review/tinotax-review/: Cargo.toml
crates/tinotax-app/: Cargo.toml
crates/tinotax-app/src/: README.md  diagnose_project.rs  doctor.rs  export_review.rs  fetch_project.rs  lib.rs  normalise_project.rs  pipeline.rs  run_demo.rs
crates/tinotax-app/tests/: README.md  pipeline_e2e.rs
crates/tinotax-cex/: Cargo.toml
crates/tinotax-cex/src/: awaken.rs  binance.rs  coinbase.rs  column_mapping.rs  generic_csv.rs  importer.rs  kraken.rs  lib.rs  record.rs
crates/tinotax-cli/: Cargo.toml  README.md
crates/tinotax-cli/src/: cli.rs  main.rs
crates/tinotax-config/: Cargo.toml
crates/tinotax-config/src/: lib.rs  project_config.rs
crates/tinotax-connectors/: Cargo.toml  README.md
crates/tinotax-connectors/src/: README.md  blockscout.rs  fetcher.rs  http.rs  lib.rs  nearblocks.rs
crates/tinotax-connectors/src/models/: README.md  blockscout.rs  mod.rs  nearblocks.rs
crates/tinotax-core/: Cargo.toml
crates/tinotax-core/src/: README.md  amount.rs  asset.rs  chain.rs  date.rs  error.rs  event.rs  lib.rs  price.rs  review.rs  source.rs  tax_event.rs
crates/tinotax-diagnostics/: Cargo.toml
crates/tinotax-diagnostics/src/: README.md  assets.rs  duplicates.rs  lib.rs  review_flags.rs  summary.rs
crates/tinotax-evidence/: Cargo.toml
crates/tinotax-evidence/src/: assumptions.rs  hmrc_questions.rs  lib.rs  platforms.rs  raw_index.rs
crates/tinotax-ledger/: Cargo.toml  README.md
crates/tinotax-ledger/src/: build.rs  csv_export.rs
crates/tinotax-normalise/: Cargo.toml  README.md
crates/tinotax-normalise/src/: README.md  classify.rs  dedupe.rs  event_id.rs  evm.rs  lib.rs  near.rs
crates/tinotax-pricing/: Cargo.toml
crates/tinotax-pricing/src/: audit.rs  lib.rs  price_book.rs  provider.rs  valuation.rs
crates/tinotax-report/: Cargo.toml
crates/tinotax-report/src/: README.md  audit_report.rs  csv_export.rs  json_export.rs  lib.rs
crates/tinotax-review/: Cargo.toml  README.md
crates/tinotax-review/src/: README.md  apply_review.rs  export_all.rs  export_review.rs  lib.rs  load.rs
crates/tinotax-store/: Cargo.toml
crates/tinotax-store/src/: README.md  jsonl.rs  lib.rs  manifest.rs  project_dirs.rs  raw_cache.rs
crates/tinotax-tax-uk/: Cargo.toml
crates/tinotax-tax-uk/src/: README.md  disposals.rs  domain.rs  fees.rs  income.rs  lib.rs  matching.rs  reports.rs  s104_pool.rs  same_day.rs  tax_year.rs  thirty_day.rs
crates/valuation/tinotax-pricing/: Cargo.toml  README.md
crates/valuation/tinotax-pricing/src/: README.md  manual_import.rs  missing.rs  price_book.rs  provider.rs  valuation.rs
crates/valuation/tinotax-tax-uk/: Cargo.toml  README.md
crates/valuation/tinotax-tax-uk/src/: lib.rs  matching.rs  reports.rs  tax_year.rs  thirty_day.rs  validation.rs
docs/: PRODUCTION_READINESS.md  README.md  RUST_PRODUCTION_READINESS_CHECKLIST.md  accountant_review.md  analysis_and_visuals.md  architecture.md  assumptions_and_limitations.md  cex_imports.md  commands.md  data_model.md  dependency-policy.md  go-live-runbook.md  hmrc_evidence_pack.md  installation.md  performance.md  pricing.md  production_gate.md  release.md  review_workflow.md  runbook.md  rust-optimisation.md  uk_tax_engine.md  unsafe.md
(+4 files in other folders)
