[workspace]
resolver = "2"
members = [
  "crates/foundation/*",
  "crates/ingest/*",
  "crates/review/*",
  "crates/valuation/*",
  "crates/output/*",
  "crates/interface/*",
  "apps/desktop/src-tauri",
]

[workspace.package]
version = "0.1.0"
edition = "2021"
license = "MIT OR Apache-2.0"
repository = "https://github.com/trilltino/tinotax"

[workspace.lints.rust]
unsafe_code = "forbid"

[workspace.lints.clippy]
expect_used = "deny"
panic = "deny"
todo = "deny"
unimplemented = "deny"
unreachable = "deny"
unwrap_used = "deny"

[workspace.dependencies]
# Internal crates
tinotax-core = { path = "crates/foundation/tinotax-core" }
tinotax-config = { path = "crates/foundation/tinotax-config" }
tinotax-store = { path = "crates/foundation/tinotax-store" }
tinotax-connectors = { path = "crates/ingest/tinotax-connectors" }
tinotax-cex = { path = "crates/ingest/tinotax-cex" }
tinotax-normalise = { path = "crates/ingest/tinotax-normalise" }
tinotax-diagnostics = { path = "crates/review/tinotax-diagnostics" }
tinotax-review = { path = "crates/review/tinotax-review" }
tinotax-ledger = { path = "crates/review/tinotax-ledger" }
tinotax-pricing = { path = "crates/valuation/tinotax-pricing" }
tinotax-tax-uk = { path = "crates/valuation/tinotax-tax-uk" }
tinotax-report = { path = "crates/output/tinotax-report" }
tinotax-evidence = { path = "crates/output/tinotax-evidence" }
tinotax-app = { path = "crates/interface/tinotax-app" }

# Errors
anyhow = "1"
thiserror = "2"
miette = { version = "7", features = ["fancy"] }

# Serialisation
serde = { version = "1", features = ["derive"] }
serde_json = { version = "1", features = ["arbitrary_precision", "preserve_order"] }
serde_with = "3"
toml = "0.9"

# CLI + async runtime
clap = { version = "4", features = ["derive", "env"] }
tokio = { version = "1", features = ["rt-multi-thread", "macros", "fs", "time", "sync"] }

# HTTP
reqwest = { version = "0.12", default-features = false, features = [
  "json",
  "rustls-tls",
  "gzip",
  "brotli",
  "deflate",
] }
async-trait = "0.1"

# Numerics — never f64 for money
rust_decimal = { version = "1", features = [
  "serde-with-str",
  "serde-with-arbitrary-precision",
  "macros",
] }

# Chain primitives
alloy-primitives = { version = "1", features = ["serde"] }
near-account-id = "1"

# Time / ids / enums
jiff = { version = "0.2", features = ["serde"] }
uuid = { version = "1", features = ["v4", "serde"] }
strum = { version = "0.27", features = ["derive"] }

# Files / hashing
csv = "1"
blake3 = "1"
walkdir = "2"
directories = "6"
camino = "1"

# Observability / UX
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter", "fmt"] }
indicatif = "0.17"
tabled = "0.17"

# Desktop shell
tauri = "2"
tauri-build = "2"
tauri-plugin-wdio-webdriver = "1"
tauri-plugin-dialog = { version = "2", default-features = false }
open = "5"

# Dev / test (referenced from each crate's [dev-dependencies])
assert_cmd = "2"
wiremock = "0.6"
insta = { version = "1", features = ["json"] }
tempfile = "3"
pretty_assertions = "1"

[profile.release]
lto = "thin"
