[package]
name = "tinotax-app"
version.workspace = true
edition.workspace = true
license.workspace = true

[dependencies]
tinotax-core = { workspace = true }
tinotax-config = { workspace = true }
tinotax-connectors = { workspace = true }
tinotax-store = { workspace = true }
tinotax-normalise = { workspace = true }
tinotax-diagnostics = { workspace = true }
tinotax-review = { workspace = true }
tinotax-report = { workspace = true }
tinotax-tax-uk = { workspace = true }
anyhow = { workspace = true }
tokio = { workspace = true }
tracing = { workspace = true }
camino = { workspace = true }
serde_json = { workspace = true }
