[package]
name = "tinotax-connectors"
version.workspace = true
edition.workspace = true
license.workspace = true

[dependencies]
tinotax-core = { workspace = true }
tinotax-store = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
reqwest = { workspace = true }
tokio = { workspace = true }
async-trait = { workspace = true }
anyhow = { workspace = true }
thiserror = { workspace = true }
tracing = { workspace = true }
camino = { workspace = true }

[dev-dependencies]
wiremock = { workspace = true }
tempfile = { workspace = true }
