[package]
name = "tinotax-report"
version.workspace = true
edition.workspace = true
license.workspace = true

[dependencies]
tinotax-core = { workspace = true }
tinotax-store = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
csv = { workspace = true }
anyhow = { workspace = true }
camino = { workspace = true }
