[package]
name = "tinotax-desktop"
version.workspace = true
edition.workspace = true
license.workspace = true

[lints]
workspace = true

[lib]
name = "tinotax_desktop_lib"
crate-type = ["staticlib", "cdylib", "rlib"]

[[bin]]
name = "tinotax-desktop"
path = "src/main.rs"

[build-dependencies]
tauri-build = { workspace = true }

[dependencies]
tinotax-app = { workspace = true }
anyhow = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
tokio = { workspace = true }
tracing = { workspace = true }
tauri = { workspace = true }
tauri-plugin-wdio-webdriver = { workspace = true }
tauri-plugin-dialog = { workspace = true }
open = { workspace = true }
