[package]
name = "tinotax-normalise"
version.workspace = true
edition.workspace = true
license.workspace = true

[lints]
workspace = true

[dependencies]
tinotax-core = { workspace = true }
tinotax-store = { workspace = true }
tinotax-connectors = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
rust_decimal = { workspace = true }
blake3 = { workspace = true }
anyhow = { workspace = true }
tracing = { workspace = true }
jiff = { workspace = true }
camino = { workspace = true }

[dev-dependencies]
pretty_assertions = { workspace = true }
tempfile = { workspace = true }
