[package]
name = "tinotax-evidence"
version.workspace = true
edition.workspace = true
license.workspace = true

[lints]
workspace = true

[dependencies]
tinotax-core = { workspace = true }
tinotax-config = { workspace = true }
tinotax-store = { workspace = true }
tinotax-review = { workspace = true }
tinotax-ledger = { workspace = true }
anyhow = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
toml = { workspace = true }
rust_decimal = { workspace = true }
csv = { workspace = true }
camino = { workspace = true }
walkdir = { workspace = true }
tracing = { workspace = true }

[dev-dependencies]
tempfile = { workspace = true }
pretty_assertions = { workspace = true }
