[package]
name = "tinotax-ledger"
version.workspace = true
edition.workspace = true
license.workspace = true

[lints]
workspace = true

[dependencies]
tinotax-core = { workspace = true }
tinotax-store = { workspace = true }
tinotax-review = { workspace = true }
anyhow = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
rust_decimal = { workspace = true }
csv = { workspace = true }
blake3 = { workspace = true }
camino = { workspace = true }
tracing = { workspace = true }

[dev-dependencies]
tempfile = { workspace = true }
pretty_assertions = { workspace = true }
