[package]
name = "tinotax-review"
version.workspace = true
edition.workspace = true
license.workspace = true

[lints]
workspace = true

[dependencies]
tinotax-core = { workspace = true }
tinotax-store = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
csv = { workspace = true }
anyhow = { workspace = true }
camino = { workspace = true }
tracing = { workspace = true }
rust_decimal = { workspace = true }

[dev-dependencies]
tempfile = { workspace = true }
pretty_assertions = { workspace = true }
